<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/background_home" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_takeoffcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/et_takeoffcity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/takeoffcity"
                android:singleLine="true"
                android:textColorHint="@color/accent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_arrivecity"
            android:layout_below="@+id/textInputLayout_takeoffcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/et_arrivecity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/arrivedcity"
                android:singleLine="true"
                android:textColorHint="@color/accent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_date"
            android:layout_below="@+id/textInputLayout_arrivecity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/takeofftime"
                android:singleLine="true"
                android:textColorHint="@color/accent" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button_airline_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputLayout_date"
            android:layout_centerInParent="true"
            android:text="@string/button_query"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>